--- a/styles/summary.scss
+++ b/styles/summary.scss
@@ -46,6 +46,7 @@ h2 {
     padding: 10px 15px;
     margin: 1vh 0;
     display: flex;
+    font-size: 2vh;
 
     .responsibles {
         flex-grow: 0;
@@ -76,7 +77,7 @@ h2 {
 }
 
 .no-broken-builds-message {
-    font-size: 50px;
+    font-size: 3vh;
     text-align: center;
     color: #454545;
 }
