--- a/styles/queue.scss
+++ b/styles/queue.scss
@@ -6,7 +6,8 @@ ul {
 
 li {
 	margin: 5px 0;
-    font-size: 2.5vh;
+    font-size: 2vh;
+    line-height: 1.3em;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -71,18 +72,25 @@ li {
 }
 
 .sleeping {
-	padding-top: 110px;
-	position: relative;
-	font-size: 40px;
-	text-align: center;
-    margin: 0;
+
+    .text,
+    .animation {
+        position: absolute;
+        font-size: 3.5vh;
+        text-align: center;
+        margin: 0;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 100%;
+    }
 
     span {
         color: #fff;
         position: absolute;
-        top: 50px;
+        top: -7vh;
         left: 40%;
-        font-size: 80px;
+        font-size: 8vh;
         opacity: 0;
         animation: sleep 9s infinite linear;
 
